--- a/demo.html
+++ b/demo.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
-	<script src="/js/jquery.js" type="text/javascript" ></script>
-	<script src="/js/nik/jsse.js" type="text/javascript"></script>
+	<script src="3rd-party/jquery.js" type="text/javascript" ></script>
+	<script src="3rd-party/jsse.js" type="text/javascript"></script>
 
 	<style type="text/css">
 		body {font-family: Arial, Verdana, Tahoma;width: 700px; padding: 0 50px 0 50px;}
