--- a/test.html
+++ b/test.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
-	<script type="text/javascript" src="jquery.js" ></script>
 	<script type="text/javascript" src="jsse.js"></script>
-	<script type="text/javascript" src="qunit.js"></script>
-	<link type="text/css" rel="stylesheet" href="qunit.css"/>
+	<script type="text/javascript" src="3rd-party/jquery.js" ></script>
+	<script type="text/javascript" src="3rd-party/qunit.js"></script>
+	<link type="text/css" rel="stylesheet" href="3rd-party/qunit.css"/>
 	
 	<script type="text/javascript">
 		$(document).ready(function(){
